[package]
name = "nvpair-rs"
authors = ["Lack <598223084@qq.com>"]
repository = "https://github.com/stone-rs/nvpair-rs"
documentation = "https://docs.rs/nvpair-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "libnvpair-sys",
    "libnvpair",
]

[dependencies]
libc = "0.2"
thiserror = "1.0"

libnvpair = { path = "libnvpair" }