[package]
name = "nvpair-rs"
authors = ["Lack <598223084@qq.com>"]
description = "Safe and rustic wrapper around nvpair"
repository = "https://github.com/stone-rs/nvpair-rs"
documentation = "https://docs.rs/nvpair-rs"
version = "0.3.0"
edition = "2021"
categories = ["api-bindings", "data-structures", "os"]
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "stone-libnvpair-sys",
    "stone-libnvpair",
]

[dependencies]
libc = "0.2"
thiserror = "1.0"

stone-libnvpair = { version = "0.2", path = "stone-libnvpair" }