[package]
name = "stone-libnvpair-sys"
version = "0.2.0"
edition = "2021"
authors = ["Lack <598223084@qq.com>"]
license = "MIT"
description = "libnvpair FFI bindings"
repository = "https://github.com/stone-rs/nvpair-rs/stone-libnvpair-sys"
build = "build.rs"
readme = "README.md"

[dependencies]
libc = "0.2"


[build-dependencies]
bindgen = "0.60"
cc = "1.0"